--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ of the Moon."
 				</li>
 			</ul>
 			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
-			<section class="goodHeight">
+			<section class="goodHeight" style="overflow-y:auto">
 	 				<p>All blog posts linked below:</p>
 	 				<div>
 	 					<ul>
