css build problems
Former-commit-id: ae13ea25ae18826e076c93415b2f8793f5e544d1 [formerly da693c871d446b1cd2df026978a03c7ae87aad00]
Former-commit-id: 9a8c8f5ddd142721b822a50581ca587daf24e254

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ of the Moon."
 				</li>
 			</ul>
 			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
-			<section class="goodHeight" style="overflow-y:auto">
-	 				<p>All blog posts linked below:</p>
+			<section class="goodHeight" style="overflow-y:auto; margin-top: 1rem">
+	 				<p class="blog">All blog posts linked below:</p>
 	 				<div>
-	 					<ul>
+	 					<ul class="blog">
 	 					    {% for post in site.posts %}
 	 							{% if forloop.index <= 5 %}
 	 						<li>
