--- a/tools/teth.html
+++ b/tools/teth.html
@@ -107,22 +107,31 @@ function calc(){
 	var lowIteratorSum = 0;
 	var highIteratorSum = 0;
 	var iteratorLimit = 1000;
+	var lowCrosses = [];
+	var highCrosses = [];
 	for(var i=0;i<iteratorLimit;i++){
-		lowIteratorSum += Math.pow(
+		var lowCross = Math.pow(
 			Math.E,
 			integral(moon.gm,tether.angularVelocity,tether.foot + moon.radius,
 				tether.foot + i*(tether.centre - tether.foot)/iteratorLimit + moon.radius
 			)
 			/tether.strength
 		);
-		highIteratorSum += Math.pow(
+		lowIteratorSum += lowCross;
+		var highCross = Math.pow(
 			Math.E,
 			integral(moon.gm,tether.angularVelocity,tether.centre + moon.radius,
 				tether.centre + i*(tether.top - tether.centre)/iteratorLimit + moon.radius
 			)
 			/tether.strength
 		);
+		highIteratorSum += highCross;
+		if(i % 10 == 0){
+			lowCrosses.push(lowCross);
+			highCrosses.push(lowCross);
+		};
 	};
+	//alert(lowCrosses);
 
 	tether.lowMass = tether.lowAcceleration*(tether.centre-tether.foot)*(lowIteratorSum/iteratorLimit)/tether.strength;
 	tether.highMass = tether.highAcceleration*(tether.top-tether.centre)*(highIteratorSum/iteratorLimit)/tether.strength;
@@ -279,7 +288,7 @@ tether.dockedEnergy =
 	while(illustration.lastChild){
     	illustration.removeChild(illustration.lastChild);
 	};
-	illustration.setAttributeNS(null,"viewBox",Math.max(-moon.radius/900,(moon.radius - (tether.top + tether.foot)/2)/1000) + " " + Math.max(-moon.radius/900,-(tether.top - tether.foot)/4000) + " " + Math.min((moon.radius + tether.top)/900,(tether.top - tether.foot)/450) + " " + Math.min(moon.radius/450,(tether.top - tether.foot)/2000));
+	illustration.setAttributeNS(null,"viewBox",Math.max(-moon.radius/900,(moon.radius - (tether.top + tether.foot)/2)/1000) + " " + Math.max(-moon.radius/900,-(tether.top - tether.foot)/4000) + " " + Math.min((moon.radius + tether.top)/850,(tether.top - tether.foot)/450) + " " + Math.min(moon.radius/450,(tether.top - tether.foot)/2000));
 
 
 //lots of svg drawing:
@@ -302,7 +311,7 @@ tether.dockedEnergy =
 	svg_rotate.setAttributeNS(null,"attributeName","viewBox");
 	svg_rotate.setAttributeNS(null,"begin","indefinite");
 	svg_rotate.setAttributeNS(null,"from",-moon.radius/900 + " " + (-moon.radius/900) + " " + (moon.radius*2 + tether.top)/225 + " " + moon.radius/112);
-	svg_rotate.setAttributeNS(null,"to",Math.max(-moon.radius/900,(moon.radius - (tether.top + tether.foot)/2)/1000) + " " + Math.max(-moon.radius/900,-(tether.top - tether.foot)/4000) + " " + Math.min((moon.radius + tether.top)/900,(tether.top - tether.foot)/450) + " " + Math.min(moon.radius/450,(tether.top - tether.foot)/2000));
+	svg_rotate.setAttributeNS(null,"to",Math.max(-moon.radius/900,(moon.radius - (tether.top + tether.foot)/2)/1000) + " " + Math.max(-moon.radius/900,-(tether.top - tether.foot)/4000) + " " + Math.min((moon.radius + tether.top)/850,(tether.top - tether.foot)/450) + " " + Math.min(moon.radius/450,(tether.top - tether.foot)/2000));
 	svg_rotate.setAttributeNS(null,"dur",0.5);
 
     var animation = document.createElementNS(svgNS,"animate");
@@ -399,6 +408,25 @@ tether.dockedEnergy =
 		marker_container.appendChild(marker);
 		text_marker_container.appendChild(marker_text);
 	};
+	//construct path
+	var lowerPath = "M"+(tether.foot + moon.radius)/1000 + " " + (tether.top - tether.foot)/20000 + "l" + (tether.centre - tether.foot)/1000 + " 0l0 " + (tether.top - tether.foot)/20000;
+	var upperPath = "M"+(tether.top + moon.radius)/1000 +  " " + (tether.top - tether.foot)/20000 + "l" + (tether.centre - tether.top)/1000 + " 0l0 " + (tether.top - tether.foot)/20000;
+	for(var i=1;i<lowCrosses.length;i++){
+		lowerPath += "l-" + (tether.centre - tether.foot)/(1000*lowCrosses.length) + " " + (Math.sqrt(1/lowCrosses[i]) -  Math.sqrt(1/lowCrosses[i-1]))*(tether.top - tether.foot)/20000;
+		upperPath += "l" + (tether.top - tether.centre)/(1000*highCrosses.length) + " " + (Math.sqrt(1/highCrosses[i]) -  Math.sqrt(1/highCrosses[i-1]))*(tether.top - tether.foot)/20000;
+	};
+	lowerPath += "l-" + (tether.centre - tether.foot)/(1000*lowCrosses.length) + " 0z";
+	upperPath += "l" + (tether.top - tether.centre)/(1000*highCrosses.length) + " 0z";
+	var tether_cross_low = document.createElementNS(svgNS,"path");
+	tether_cross_low.setAttributeNS(null,"fill","black");
+	tether_cross_low.setAttributeNS(null,"d",lowerPath);
+	tether_cross_low.setAttributeNS(null,"stroke","none");
+	text_marker_container.appendChild(tether_cross_low);
+	var tether_cross_high = document.createElementNS(svgNS,"path");
+	tether_cross_high.setAttributeNS(null,"fill","black");
+	tether_cross_high.setAttributeNS(null,"d",upperPath);
+	tether_cross_high.setAttributeNS(null,"stroke","none");
+	text_marker_container.appendChild(tether_cross_high);
 
 	marker_container.appendChild(marker_animation);
 	illustration.appendChild(marker_container);
