not much different...
Former-commit-id: 4f7df227adb16c8cdd37abbc07a2fb4df98eb8c2

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@ layout: defaultMinimal
 title: Moonwards Virtual Moon Colony Project
 stylesheet: "css/main.nest.sass.css"
 description: "A realistic virtual lunar colony, showing how space
-settlement will affect our future. The technology and science of living
-on the Moon, the challenges and opportunities of low gravity, hard vacuum,
-high radiation, intense sun, large temperature swings, and the substances
+settlement will affect our future. The technology and science of living on the Moon, the challenges and opportunities of low gravity, hard vacuum, high radiation, intense sun, large temperature swings, and the substances
 of the Moon."
 ---
 
