--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ image: "img/NewTESS-Stirlings.jpg"
 	 					    {% for post in site.posts %}
 	 							{% if forloop.index <= 5 %}
 	 						<li>
-	 							<h1><a href="{{post.url | remove_first: "/" }}">{{post.title}}</a></h1>
+	 							<h1><a href="{{post.url }}">{{post.title}}</a></h1>
 	 							<h3>{{ post.excerpt | strip_html}}</h3>
 	 						</li>
 	 						{% else %}
 	 						<li>
-	 							<h2><a href="{{post.url | remove_first: "/" }}">{{post.title}}</a></h2>
+	 							<h2><a href="{{post.url }}">{{post.title}}</a></h2>
 	 							<h3>{{ post.content | truncatewords: 50 | strip_html}}</h3>
 	 						</li>
 	 						{% endif%}
