--- a/learn.html
+++ b/learn.html
@@ -23,7 +23,22 @@ of the Moon."
 	<section class="calc" id="tryit">
 		<div class="outerDiv" id="PelletSim">
 			<div class="calcDiv">
-				<a href="pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400" alt="Pellet simulator"></a>
+				<a href="pelletSimulator.html" class="plzNoHoverBackground"><img src="img/pelletSimulatorLink.png" width="400" alt="Pellet simulator"></a>
+			</div>
+		</div>
+		<div class="outerDiv" id="EngineSearch">
+			<div class="calcDiv">
+				<a href="engineSearch.html" class="plzNoHoverBackground"><img src="img/engineSearchLink.png" width="400" alt="Engine search"></a>
+			</div>
+		</div>
+		<div class="outerDiv" id="TetherTool">
+			<div class="calcDiv">
+				<a href="teth.html" class="plzNoHoverBackground"><img src="img/tetherToolLink.png" width="400" alt="Tether tool"></a>
+			</div>
+		</div>
+		<div class="outerDiv" id="StarPlotter">
+			<div class="calcDiv">
+				<a href="starplotter.html" class="plzNoHoverBackground"><img src="img/starPlotterLink.png" width="400" alt="Starplotter"></a>
 			</div>
 		</div>
 		<div class="outerDiv">
