--- a/tools/teth.html
+++ b/tools/teth.html
@@ -2,7 +2,111 @@
 layout: toolTemplate
 title: Tethers
 ---
+			<h1>Tethers</h1>
+			System<select name="system"></select><br><!--dynamically added-->
+			<h3>Vertical tether</h3>
+			<form id="input">
+				<input name="foot" value="50">Tether foot altitude (km)<br>
+				<input name="top" value="9500">Tether top altitude (km)<br>
+				<input name="centre" value="5000">Tether centre altitude (km). The part of the tether in circular orbit<br>
+				<div class="container">
+					Tether material<select name="material">
+						<option value="zylon">Zylon (5.8 GPa, 1.54 g/cm<sup>3</sup>)</option>
+						<option value="aramid">Aramid (3.62 GPa, 1.44 g/cm<sup>3</sup>)</option>
+						<option value="hppe">HPPE (2.4 GPa, 0.97 g/cm<sup>3</sup>)</option>
+						<option value="steel">Steel (2.62 GPa, 8 g/cm<sup>3</sup>)</option>
+						<option value="mwcnt">Future Carbon Nanotubes (40 GPa, 1.8 g/cm<sup>3</sup>)</option>
+						<option value="xxmwcnt">Super-Future Carbon Nanotubes (120 GPa, 1.8 g/cm<sup>3</sup>)</option>
+					</select><br>
+					<input name="overrideMaterial" type="checkbox">Use custom material instead<br>
+					<input name="tensileStrength">Tensile strength (Pa)<br>
+					<input name="density">Density kg/m³<br>
+					<input name="safety" value="1">Safety factor<br>
+				</div>
+				<div class="container">
+					<input name="centralMass">Central mass<br>
+					<input name="payloadMass">Mass of docking shuttle<br>
+				</div>
+				<p style="color:red;" id="warnings"></p>
+			</form>
+			<button onclick="calc()">Calculate</button>
+			<div id="output">
+				<div class="container" id="tetherSketch">
+					<svg width="900" height="250" id="svg_ilu"></svg>
+				</div><br>
+				<div class="container">
+					<h4>General information</h4>
+					<p id="period"></p>
+					<p id="footVel"></p>
+					<p id="hitTheGround"></p>
+					<p id="centreVel"></p>
+					<p id="topVel"></p>
+				</div><br>
+				<div class="container">
+					<h4>If released from top:</h4>
+					<p id="escape"></p>
+					<p id="newApoapsis"></p>
+					<h4>Minimum release altitude:</h4>
+					<p id="releases"></p>
+				</div><br>
+				<div class="container">
+					<h4>Climber:</h4>
+					<p id="lowClimber"></p>
+					<p id="highClimber"></p>
+				</div><br>
+				<div class="container">
+					<h4>Tether properties</h4>
+					<p id="lowAcceleration"></p>
+					<p id="lowRatio"></p>
+					<p id="lowMass"></p>
+					<p id="highAcceleration"></p>
+					<p id="highRatio"></p>
+					<p id="highMass"></p>
+				</div>
+			</div>
 <script>
+String.prototype.capitalize = function(){
+	if(this.length === 0){
+		return "";
+	};
+	return this[0].toUpperCase() + this.slice(1);
+};
+(function(){//planets.js has lots of data, why not make all possible systems available?
+	var availableSystems = [];
+		//we on
+	for(var planet in planets){//all keys, not only bodies
+		if(planets[planet].hasOwnProperty("orbit") && planets[planet].orbit.hasOwnProperty("semiMajor")){//only those with orbital data
+			if(planets[planet].hasOwnProperty("radius")){
+				if(!planets[planet].hasOwnProperty("gm")){
+					if(planets[planet].hasOwnProperty("mass")){
+						planets[planet].gm = planets[planet].mass * 6.67408e-11;
+					}
+					else{
+						continue;
+					};
+				};
+				availableSystems.push(planet);
+			};
+		};
+	};
+	availableSystems.sort();
+	//maka a <select> list out of all the systems
+	var systemSelector = document.getElementsByName("system")[0];
+	for(var i=0;i<availableSystems.length;i++){
+		var opt = document.createElement('option');
+		opt.value = availableSystems[i];
+		opt.innerHTML = availableSystems[i].capitalize();
+		systemSelector.appendChild(opt);
+		if(availableSystems[i] == "moon"){//moon should be default
+			systemSelector.selectedIndex = i;
+		};
+	};
+})();
+var svgNS = "http://www.w3.org/2000/svg";
+var illustration = document.getElementById("svg_ilu");
+var selector = document.getElementsByName("system")[0];//full support of all bodies in planets.json
+var moon = planets[selector.options[selector.selectedIndex].value];//parent object of the tether
+
 var tether = {//remember to also update the select list in the HTML
 	materials:{
 		zylon:[5800000000,1540],
@@ -13,15 +117,8 @@ var tether = {//remember to also update the select list in the HTML
 		xxmwcnt: [120000000000,1800]
 	}
 };
-String.prototype.capitalize = function(){
-	if(this.length === 0){
-		return "";
-	};
-	return this[0].toUpperCase() + this.slice(1);
-};
 function calc(){
-	var selector = document.getElementsByName("system")[0];//full support of all bodies in planets.json
-	var moon = planets[selector.options[selector.selectedIndex].value];//parent object of the tether
+	moon = planets[selector.options[selector.selectedIndex].value];//parent object of the tether
 	var warnings = "";//message the user about malformed input
 	var form = document.getElementById("input").elements;
 	var gnum = function(field){//form parser
@@ -314,8 +411,7 @@ tether.dockedEnergy =
 	out("highClimber","Upper tether climber energy usage: " + myRound(tether.highIntegral,0) + " J/kg");
 
 	out("warnings",warnings);
-	var svgNS = "http://www.w3.org/2000/svg";
-	var illustration = document.getElementById("svg_ilu");
+
 	while(illustration.lastChild){//clean svg
     	illustration.removeChild(illustration.lastChild);
 	};
@@ -340,11 +436,13 @@ tether.dockedEnergy =
 	};
 	var addToolTip = function(container,content){
 		var newToolTip = document.createElementNS(svgNS,"title");
+		container.setAttributeNS(null,"class",container.getAttributeNS(null,"class") + " tooltip");
 		var textNode = document.createTextNode(content);
 		newToolTip.appendChild(textNode);
 		container.appendChild(newToolTip);
 	};
 	var svg_planet = document.createElementNS(svgNS,"circle");
+
 	svg_planet.setAttributeNS(null,"cx",0);
 	svg_planet.setAttributeNS(null,"cy",0);
 	if(moon.hasOwnProperty("color")){
@@ -399,12 +497,6 @@ tether.dockedEnergy =
     text_marker_animation.setAttributeNS(null,"dur", 3);
     text_marker_animation.setAttributeNS(null,"fill","freeze");
 
-	var foot_marker = document.createElementNS(svgNS,"circle");
-	foot_marker.setAttributeNS(null,"cx",(tether.foot + moon.radius)/1000);
-	foot_marker.setAttributeNS(null,"cy",0);
-	foot_marker.setAttributeNS(null,"fill","red");
-	foot_marker.setAttributeNS(null,"r",svg_scale*1.12);
-
 	addText(
 		text_marker_container,
 		"Foot",
@@ -430,16 +522,27 @@ tether.dockedEnergy =
 		"black"
 	);
 
+	var foot_marker = document.createElementNS(svgNS,"circle");
+	foot_marker.setAttributeNS(null,"cx",(tether.foot + moon.radius)/1000);
+	foot_marker.setAttributeNS(null,"cy",0);
+	foot_marker.setAttributeNS(null,"fill","red");
+	foot_marker.setAttributeNS(null,"class","draggable");
+	foot_marker.setAttributeNS(null,"r",svg_scale*1.12);
+
 	var anchor_marker = document.createElementNS(svgNS,"circle");
 	anchor_marker.setAttributeNS(null,"cx",(tether.centre + moon.radius)/1000);
 	anchor_marker.setAttributeNS(null,"cy",0);
 	anchor_marker.setAttributeNS(null,"fill","red");
+	anchor_marker.setAttributeNS(null,"class","draggable");
+	anchor_marker.setAttributeNS(null,"transform","matrix(1 0 0 1 0 0)");
+	anchor_marker.setAttributeNS(null,"onmousedown","selectElement(evt)");
 	anchor_marker.setAttributeNS(null,"r",svg_scale*1.12);
 
 	var top_marker = document.createElementNS(svgNS,"circle");
 	top_marker.setAttributeNS(null,"cx",(tether.top + moon.radius)/1000);
 	top_marker.setAttributeNS(null,"cy",0);
 	top_marker.setAttributeNS(null,"fill","red");
+	top_marker.setAttributeNS(null,"class","draggable");
 	top_marker.setAttributeNS(null,"r",svg_scale*1.12);
 
 	svg_tether.appendChild(animation);
@@ -514,105 +617,33 @@ tether.dockedEnergy =
 	illustration.appendChild(marker_container);
 	illustration.appendChild(text_marker_container);
 	illustration.appendChild(svg_planet);
+
 	illustration.appendChild(svg_rotate);
 	svg_rotate.beginElement();
 	animation.beginElement();
 	marker_animation.beginElement();
 	text_marker_animation.beginElement();
 };
-</script>
-			<h1>Tethers</h1>
-			System<select name="system"></select><br><!--dynamically added-->
-			<h3>Vertical tether</h3>
-			<form id="input">
-				<input name="foot" value="50">Tether foot altitude (km)<br>
-				<input name="top" value="9500">Tether top altitude (km)<br>
-				<input name="centre" value="5000">Tether centre altitude (km). The part of the tether in circular orbit<br>
-				<div class="container">
-					Tether material<select name="material">
-						<option value="zylon">Zylon (5.8 GPa, 1.54 g/cm<sup>3</sup>)</option>
-						<option value="aramid">Aramid (3.62 GPa, 1.44 g/cm<sup>3</sup>)</option>
-						<option value="hppe">HPPE (2.4 GPa, 0.97 g/cm<sup>3</sup>)</option>
-						<option value="steel">Steel (2.62 GPa, 8 g/cm<sup>3</sup>)</option>
-						<option value="mwcnt">Future Carbon Nanotubes (40 GPa, 1.8 g/cm<sup>3</sup>)</option>
-						<option value="xxmwcnt">Super-Future Carbon Nanotubes (120 GPa, 1.8 g/cm<sup>3</sup>)</option>
-					</select><br>
-					<input name="overrideMaterial" type="checkbox">Use custom material instead<br>
-					<input name="tensileStrength">Tensile strength (Pa)<br>
-					<input name="density">Density kg/m³<br>
-					<input name="safety" value="1">Safety factor<br>
-				</div>
-				<div class="container">
-					<input name="centralMass">Central mass<br>
-					<input name="payloadMass">Mass of docking shuttle<br>
-				</div>
-				<p style="color:red;" id="warnings"></p>
-			</form>
-			<button onclick="calc()">Calculate</button>
-			<div id="output">
-				<div class="container" id="tetherSketch">
-					<svg width="900" height="250" id="svg_ilu"></svg>
-				</div><br>
-				<div class="container">
-					<h4>General information</h4>
-					<p id="period"></p>
-					<p id="footVel"></p>
-					<p id="hitTheGround"></p>
-					<p id="centreVel"></p>
-					<p id="topVel"></p>
-				</div><br>
-				<div class="container">
-					<h4>If released from top:</h4>
-					<p id="escape"></p>
-					<p id="newApoapsis"></p>
-					<h4>Minimum release altitude:</h4>
-					<p id="releases"></p>
-				</div><br>
-				<div class="container">
-					<h4>Climber:</h4>
-					<p id="lowClimber"></p>
-					<p id="highClimber"></p>
-				</div><br>
-				<div class="container">
-					<h4>Tether properties</h4>
-					<p id="lowAcceleration"></p>
-					<p id="lowRatio"></p>
-					<p id="lowMass"></p>
-					<p id="highAcceleration"></p>
-					<p id="highRatio"></p>
-					<p id="highMass"></p>
-				</div>
-			</div>
-<script>
-(function(){//planets.js has lots of data, why not make all possible systems available?
-	var availableSystems = [];
-		//we on
-	for(var planet in planets){//all keys, not only bodies
-		if(planets[planet].hasOwnProperty("orbit") && planets[planet].orbit.hasOwnProperty("semiMajor")){//only those with orbital data
-			if(planets[planet].hasOwnProperty("radius")){
-				if(!planets[planet].hasOwnProperty("gm")){
-					if(planets[planet].hasOwnProperty("mass")){
-						planets[planet].gm = planets[planet].mass * 6.67408e-11;
-					}
-					else{
-						continue;
-					};
-				};
-				availableSystems.push(planet);
-			};
-		};
+var selectedElement = 0;
+function selectElement(evt) {
+	selectedElement = evt.target;
+	illustration.setAttributeNS(null, "onmousemove", "moveElement(evt)");
+	illustration.setAttributeNS(null, "onmouseup", "deselectElement(evt)");
+};
+function moveElement(evt){
+	var pt = illustration.createSVGPoint(), svgP, circle;
+	pt.x = evt.clientX;
+	pt.y = evt.clientY;
+	svgP = pt.matrixTransform(illustration.getScreenCTM().inverse());
+	selectedElement.setAttributeNS(null,"cx",svgP.x);
+	//document.getElementById("input").elements["centre"].value = svgP.x*1000 + planets[document.getElementsByName("system")[0].options[document.getElementsByName("system")[0].selectedIndex].value].radius;
+	//calc();
+};
+function deselectElement(evt){
+	if(selectedElement != 0){
+		illustration.removeAttributeNS(null, "onmousemove");
+		illustration.removeAttributeNS(null, "onmouseup");
+		selectedElement = 0;
 	};
-	availableSystems.sort();
-	//maka a <select> list out of all the systems
-	var systemSelector = document.getElementsByName("system")[0];
-	for(var i=0;i<availableSystems.length;i++){
-		var opt = document.createElement('option');
-		opt.value = availableSystems[i];
-		opt.innerHTML = availableSystems[i].capitalize();
-		systemSelector.appendChild(opt);
-		if(availableSystems[i] == "moon"){//moon should be default
-			systemSelector.selectedIndex = i;
-		};
-	};
-})();
+};
 </script>
