--- a/tools/teth.html
+++ b/tools/teth.html
@@ -24,6 +24,7 @@ title: Tethers
 					<input name="safety" value="1">Safety factor<br>
 				</div>
 				<div class="container">
+					<p>(optional, not used for much yet)</p>
 					<input name="centralMass">Central mass<br>
 					<input name="payloadMass">Mass of docking shuttle<br>
 				</div>
